--- a/.github/workflows/needs-reply-remove.yml
+++ b/.github/workflows/needs-reply-remove.yml
@@ -16,8 +16,7 @@ jobs:
           route: DELETE /repos/:repository/issues/:issue/labels/:label
           repository: ${{ github.repository }}
           issue: ${{ github.event.issue.number }}
-          label: |
-            |
+          label: >
             needs: reply
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
